--- a/control/views/css/default.css
+++ b/control/views/css/default.css
@@ -19,46 +19,46 @@ h1{
 	margin-top: 0px;
 	margin-bottom: 2%;
     padding-bottom: 1%;
-	font-size: 18pt; 
+	font-size: 18pt;
     text-align: center;
     display: block;
     clear: both;
-    text-align: center; 
+    text-align: center;
 }
 
 h2{
 	margin-top: 0%;
     margin-bottom: 6%;
 	text-align: center;
-	font-size: 16pt; 
+	font-size: 16pt;
 }
 
 h3{
 	margin-top: 0%;
 	text-align: left;
-	font-size: 10.5pt; 
+	font-size: 10.5pt;
 }
 
 h4{
 	margin-top: 3%;
     margin-bottom: 2%;
 	text-align: left;
-	font-size: 13pt; 
+	font-size: 13pt;
 }
 
 h5{
 	margin-top: 0;
     margin-bottom: 2%;
 	text-align: left;
-	font-size: 12pt; 
+	font-size: 12pt;
 }
 
 p{
     line-height: 180%;
     clear: both;
-    margin-top: 10px;          
+    margin-top: 10px;
     margin-bottom: 4%;
-    font-size: 14pt; 
+    font-size: 14pt;
     /*hyphens: auto;*/
 
     text-align: left;
@@ -77,7 +77,7 @@ img{
 }
 
 hr{
-	margin-top: 21px;	
+	margin-top: 21px;
 	border: 1px solid #111111;
 	width: 50%;
 }
@@ -91,11 +91,11 @@ ul{
 }
 
 ul li{
-    list-style-type: none; 
-    border: 2px solid #111111; 
+    list-style-type: none;
+    border: 2px solid #111111;
     margin-left: 0;
     margin-bottom: 6px;
-    border-radius: 5px;  
+    border-radius: 5px;
     line-height: 165%;
     font-size: 16pt;
 }
@@ -111,7 +111,7 @@ ol{
     margin-bottom: 3%;
 }
 
-footer{    
+footer{
     width: 100%;
 	margin-top: 2%;
     margin-bottom: 0%;
@@ -125,7 +125,7 @@ a:link, a:active, a:visited{
     text-decoration: none;
     font-weight: bold;
 }
-	
+
 a:hover{
 	color: #ffffff;
     background-color: #111111;
@@ -141,20 +141,23 @@ h2 a:hover{
 }
 
 .strike{
-    text-decoration: line-through;    
+    text-decoration: line-through;
 }
 
 li a{
+    color: white;
     display: block;
 }
 
 a.control{
-    border: 2px solid #111111; 
+    border: 2px solid #111111;
     font-size: 16pt;
     margin-right: 1.5%;
     margin-bottom: 1.5%;
-    border-radius: 5px; 
+    border-radius: 5px;
     padding: 2%;
+    display: block;
+    float: left;
 
 }
 
@@ -166,7 +169,24 @@ a.control{
     margin-bottom: 6.5%;
 }
 
-a#danger{
+#btn01,#btn03{
+    width: 26%;
+}
+
+#btn02{
+    width: 27%;
+}
+
+#btn04, #btn05, #btn06, #btn07{
+    width: 18.25%;
+}
+
+#btn08, #btn10, #btn11{
+    width: 43%;
+}
+
+#btn09{
+    width: 43%;
     background-color: red;
     color: white;
 }
